# reamberPy

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  sphinx.bat  upload.bat
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: algorithm_request.md  bug_report.md  feature_request.md  game_support_request.md  optimization-request.md  optimization_request.md
.github/workflows/: algorithm-test.yml  codacy.yml  codecov.yml  codeql-analysis.yml  pypi-publish.yml  pytest.yml  python-package.yml  unit-test.yml
.run/: Make Sphinx.run.xml
Writerside/: in.tree  redirection-rules.xml
Writerside/topics/: index.md
app/: density.py  io.py  main.py  render.py
docs/: .buildinfo  HelpTOC.json  Hit.html  Map.jhm  about.html  basics.html  bms.html  bpmhithold.html  buildingblocks.html  changelog.html  channel.html  config.json  conventions.html  conversions.html  devinfo.html  dominantbpm.html  fullln.html  genindex.html  gettingstarted.html  hitsoundcopy.html  index.html  index_md.html  map.html  mapset.html  o2jam.html  objects.inv  osu.html  parsereplay.html  pattern.html  playfield.html  playfieldpattern.html  props.html  py-modindex.html  quaver.html  reamber.html  scrollspeed.html  search.html  searchindex.js  site.webmanifest  sm.html  (+4 more)
docs/.doctrees/: environment.pickle  index.doctree
docs/_sources/: about.rst.txt  index.md.txt  index.rst.txt
docs/_static/: documentation_options.js
docs/info/: About.html  (+9 more)
examples/: test.py  testOsu.py  testSM.py
reamber/: __init__.py
reamber.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sphinx/: make.bat
tests/: .gitignore  README.md  __init__.py  conftest.py  escapes1.osu  escapes1.qua  escapes2.osu  flymagpie0.osu  flymagpie1.osu  flymagpie2.osu  flymagpie2.sm  gravity.osu  out.osu  out.sm  out.txt  out2.txt  tribalTrialEXH.osu
(+1839 files in other folders)
