[tool.poetry]
name = "reamber"
version = "1.0.0"
description = "Vertical Scrolling Rhythm Game Toolset"
authors = ["Evening"]
readme = "README.md"
exclude = ["**/*/__pycache__/"]

[tool.poetry.dependencies]
python = ">3.9.7"
numpy = "^1.26.1"
PyYAML = "^6.0.1"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
Pillow = "^11.0.0"
osrparse = "^6.0.2"
Unidecode = "^1.3.7"
tqdm = "^4.67.0"


[tool.poetry.group.dev.dependencies]
seaborn = "^0.13.0"
pytest = "^7.4.2"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
